tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7975/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(b: [[bool; 1]; 1]) -> pub [[bool; 1]; 1] {
    if b[0_u32][0_u32] == b[0_u32][0_u32] {
        b
    } else {
        b
    }
}
