tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7975/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "array",
            "length": 1,
            "type": {
              "kind": "integer",
              "sign": "unsigned",
              "width": 1
            }
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 1,
        "type": {
          "kind": "array",
          "length": 1,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 1
          }
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/62QQQ6AIAwEQX1QS1tpb35FIv7/CUqAhItedJJme9jMYb2r+Pum4Z9buiE7vbe1JFiZcwwZCXcIllSAJa2KiqJyBCXKyhotWQRDpoynGJ1QGV3wDfT/uaC4locN3Ms+hQstuQ4rWAEAAA==",
  "debug_symbols": "XY5BCsQwCEXv4rqLWfcqw1BsaosgJtikMITefWyYQOlK/3/6tcJCc9km1jXuML4rzMYivE0SA2aO6m49B+hyykbkFty4byU00gyjFpEBDpTShvaE2mpGc/oagHTx6oErC13d+XGBge158UBjnIX+ci0abjR/Uyf942Qx0FKMrqTGPPsH",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
