tooling/nargo_cli/tests/snapshots/execution_success/array_oob_regression_7975/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[array_oob_regression_7975] Circuit output: [[false]]
